fix: 다이어리 수정